<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/email_value"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:drawableRight="@android:drawable/ic_dialog_email"
            android:ems="10"
            android:hint="@string/email_value"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_value"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:drawableRight="@android:drawable/ic_lock_lock"
            android:ems="10"
            android:hint="@string/password_value"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/repassword_value"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:drawableRight="@android:drawable/ic_lock_lock"
            android:ems="10"
            android:hint="@string/repassword_value"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/register_user"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/btn_color"
            android:text="@string/register" />

        <ProgressBar
            android:id="@+id/loadingProgressRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/btn_color"
            android:indeterminate="true"
            android:visibility="invisible" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>