<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Statistics">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/date_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/btn_color"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="Choose Date"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/calory_text"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorlightblack"
                android:gravity="center"
                android:textColor="@color/colorOnPrimary"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorlightblack"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fats_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorlightblack"
                    android:gravity="center"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/carbohydrates_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorlightblack"
                    android:gravity="center"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/proteins_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorlightblack"
                    android:gravity="center"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/breakfast_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/btn_color"
                        android:text="@string/breakfast"
                        app:cornerRadius="@dimen/cardview_default_radius" />

                    <Button
                        android:id="@+id/lunchtime_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/btn_color"
                        android:text="@string/lunchtime"
                        app:cornerRadius="@dimen/cardview_default_radius" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/snacks_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/btn_color"
                        android:text="@string/snacks"
                        app:cornerRadius="@dimen/cardview_default_radius" />

                    <Button
                        android:id="@+id/dinner_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/btn_color"
                        android:text="@string/dinner"
                        app:cornerRadius="@dimen/cardview_default_radius" />
                </LinearLayout>

            </LinearLayout>

            <GridLayout
                android:id="@+id/water_cups_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:isScrollContainer="false"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/snacks_button" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>